Corrigido comando para toy_monkey_on

--- a/kdmile2014.tex
+++ b/kdmile2014.tex
@@ -77,8 +77,6 @@
 \newcommand{\mi}{motivação intrínseca}
 \newcommand{\epS}{\epsilon_{p}}
 \newcommand{\ep}{$\epS$}
-\newcommand{\mi}{MI}
-\newcommand{\mon}{$monkey_{ON}$}
 \newcommand{\pilhaS}{\mathcal{P}}
 \newcommand{\pilha}{$\pilhaS$}
 \newcommand{\attS}{a_{t+1}}
@@ -571,15 +569,15 @@ sendo que em um deles o módulo de obtenção de políticas parciais a
 partir de \mi\ foi desativado, ou seja, o agente somente receberia
 recompensas extrínsecas, sem a obtenção de políticas parciais.  Foram
 realizados 100 experimentos, de $5e5$ passos cada, com o agente
-recebendo uma recompensa extrínseca para ocorrência de \mon\ no valor
+recebendo uma recompensa extrínseca para ocorrência de \tmon\ no valor
 de 10 e recompensas intrínsecas para os demais eventos salientes no
 valor de 1.  Os resultados são apresentados no gráfico da Figura
 \ref{fig:mi}, que apresenta a média de passos necessários para ativar
 \tmon\ por quantidade de ativação. Os resultados aí presentes sugerem
-maior eficiência de aprendizado por parte do agente que utiliza
-\mi\, pois este diminui o tempo necessário para a solução do problema
-com uma maior rapidez em relação ao agente que utiliza somente
-motivação extrínseca.
+maior eficiência de aprendizado por parte do agente que utiliza \mi\,
+pois este diminui o tempo necessário para a solução do problema com
+uma maior rapidez em relação ao agente que utiliza somente motivação
+extrínseca.
 
 No gráfico da Figura \ref{fig:mi} são apresentados os valores de
 recompensa intrínseca recebida por passo do experimento, evidenciando
